test/expected/declare_sc32.out
declare x as signed char32_t
        ^
9: error: "signed char32_t" is illegal for built-in type
